<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
    </parent>

    <groupId>no.nav.dok</groupId>
    <artifactId>foerstesidegenerator</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>app</module>
        <module>foerstesideschema</module>
    </modules>

    <properties>
        <java.version>21</java.version>

        <!-- Interne NAV-avhengigheter -->
        <dokmet.api.version>23-5fe145a</dokmet.api.version>
        <metaforce-tjenestespesifikasjon.version>29-af3d66d</metaforce-tjenestespesifikasjon.version>
        <joda-time.version>2.12.7</joda-time.version>

        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
        <apache-cxf.version>4.0.4</apache-cxf.version>
        <commons-validator.version>1.8.0</commons-validator.version>
        <token-support.version>4.0.3</token-support.version>
        <springdoc-openapi-webmvc-ui.version>2.5.0</springdoc-openapi-webmvc-ui.version>

        <!-- Test -->
        <spring-cloud-contract-wiremock.version>4.1.2</spring-cloud-contract-wiremock.version>

        <!-- Plugins -->
        <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>

        <!-- Plugins brukt i app pom -->
        <patrodyne-basicjaxb.version>2.1.1</patrodyne-basicjaxb.version>
        <jaxb-runtime.version>4.0.4</jaxb-runtime.version>
        <!-- Overstyrer og nedgraderer H2 database versjon i test scope - inkompatibel flyway script.
        Ny versjon av H2 i Spring Boot 2.7.x se https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.7-Release-Notes#h2-21 -->
        <h2.version>1.4.200</h2.version>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${joda-time.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dok</groupId>
                <artifactId>foerstesideschema</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-webmvc-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.dokmet</groupId>
                <artifactId>api</artifactId>
                <version>${dokmet.api.version}</version>
            </dependency>
            <!--Security-->
            <dependency>
                <groupId>no.nav.security</groupId>
                <artifactId>token-validation-spring</artifactId>
                <version>${token-support.version}</version>
            </dependency>
            <!-- Dependencies for CXF / jaxb -->
            <dependency>
                <groupId>org.patrodyne.jvnet</groupId>
                <artifactId>hisrc-basicjaxb-runtime</artifactId>
                <version>${patrodyne-basicjaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.tjenester.metaforce</groupId>
                <artifactId>metaforce-general-service-tjenestespesifikasjon</artifactId>
                <version>${metaforce-tjenestespesifikasjon.version}</version>
            </dependency>
            <!-- CXF -->
            <dependency>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-bom</artifactId>
                <version>${apache-cxf.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons-validator.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>commons-beanutils</groupId>
                        <artifactId>commons-beanutils</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- Logging -->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-contract-wiremock</artifactId>
                <version>${spring-cloud-contract-wiremock.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.security</groupId>
                <artifactId>token-validation-spring-test</artifactId>
                <version>${token-support.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>${maven-toolchains-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${java.version}</version>
                            <vendor>openjdk</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>